fixed monthly map in navbar and attributions #698 #720, fixed sidenav icons alignment

--- a/projects/mistral/frontend/app/components/maps/meteo-tiles/side-nav/side-nav.component.scss
+++ b/projects/mistral/frontend/app/components/maps/meteo-tiles/side-nav/side-nav.component.scss
@@ -929,6 +929,9 @@ $dark-blue: #004080;
   .map-sidenav.collapsed {
     width: 42px !important;
 }
+  .map-sidenav.collapsed .toggle {
+    margin-left: 0  !important;
+  }
 }
 
 @media screen and (max-height: 679px) {
