--- a/projects/mistral/frontend/app/components/maps/seasonal/side-nav/side-nav.component.scss
+++ b/projects/mistral/frontend/app/components/maps/seasonal/side-nav/side-nav.component.scss
@@ -408,7 +408,7 @@ margin-top: 4px !important;
     padding: 10px;
     width: 22px;
     height: 22px;
-    margin-left: 3px;
+    margin-left: 0 !important;
   }
 }
 
@@ -422,6 +422,10 @@ margin-top: 4px !important;
   }
   .map-sidenav.collapsed {
     width: 42px !important;
+
+    & .toggle {
+      margin-left: 4px !important;
+    }
   }
 }
 
@@ -430,10 +434,6 @@ margin-top: 4px !important;
     .toggle {
       width: 30px !important;
       height: 30px !important;
-
-      &.collapsed {
-        margin-left: 7px !important;
-      }
     }
   }
   .selector {
